--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Prueba_clases/build/
 /Ejercicios/nbproject/private/
 /Ejercicios/build/
+/tema4_ejercicios/nbproject/private/
+/tema4_ejercicios/build/
