--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Ejercicios/build/
 /tema4_ejercicios/nbproject/private/
 /tema4_ejercicios/build/
+/XmiCuenta/nbproject/private/
+/XmiCuenta/build/
