--- a/t4_ej_clases/nbproject/project.properties
+++ b/t4_ej_clases/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/tema4_ejercicios.jar
+dist.jar=${dist.dir}/t4_ej_clases.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/tema4_ejercicios
+dist.jlink.output=${dist.jlink.dir}/t4_ej_clases
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=tema4_ejercicios
-main.class=tema4_ejercicios.Tema4_ejercicios
+jlink.launcher.name=t4_ej_clases
+main.class=t4_ej_clases.T4_ej_clases
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
