--- a/t4_ej_clases/build.xml
+++ b/t4_ej_clases/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="tema4_ejercicios" default="default" basedir=".">
-    <description>Builds, tests, and runs the project tema4_ejercicios.</description>
+<project name="t4_ej_clases" default="default" basedir=".">
+    <description>Builds, tests, and runs the project t4_ej_clases.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="tema4_ejercicios-impl.jar">
+        <target name="run" depends="t4_ej_clases-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
